# 10.1

./: .env.example  README.md  mylog.txt  pyproject.toml
data/: transactions.csv  transactions_excel.xlsx
files/: file_operations.py  transactions.csv
src/: decorators.py  external_api.py  generation.py  main.py  masks.py  mylog.txt  processing.py  utils.py  widget.py
tests/: conftest.py  mylog.txt  test_decorators.py  test_external_api.py  test_file_operations.py  test_generation.py  test_main.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
